# retailer_sales_forecasting_system

./: .gitignore  README.md  pyproject.toml
docs/: Project Development.md  kaggle_api.txt
notebooks/: Walmart-Retail-Sales-Data-Analysis.ipynb
pipelines/walmart_data_pipeline/: README.md  docker-compose.yml  go.mod  init.sql  main.go  run_pipeline.sh
src/retailer_sales_forecasting_system/data/: extract.py
src/retailer_sales_forecasting_system/db/: postgres.py
